# kryten-misc

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  config.example.json  echo-bot.service  pyproject.toml  requirements.txt  start-echo-bot-new.ps1  start-echo-bot-new.sh  start-echo-bot.ps1  start-echo-bot.sh  stop-echo-bot.ps1  stop-echo-bot.sh  test_echo_bot.py
echo_bot/: __init__.py  main.py
